# ML24

./: main.ipynb  pyproject.toml  seatle.ipynb
exercise-1/: breast.ipynb  breast_kaggle.ipynb  breast_preprocessing.ipynb  breast_results.pkl  breast_results2.pkl  breast_results3.pkl  combined_plots.ipynb  creditg.ipynb  creditg_results.pkl  creditg_results2.pkl  creditg_results3.pkl  loan.ipynb  loan_kaggle.ipynb  loan_results.pkl  loan_results2.pkl  loan_results3.pkl  naiv_bayes.ipynb  neural_net.ipynb  random_forest.ipynb  seattle_crime_preprocessing.ipynb  seattle_crime_results.pkl  seattle_crime_results2.pkl  seattle_crime_results3.pkl  style.mplstyle  task_allocation.md
exercise-1/datasets_kaggle/breast-cancer/: pre-breast-cancer.lrn.csv  pre-breast-cancer.tes.csv  pre-norm-breast-cancer.lrn.csv  pre-norm-breast-cancer.tes.csv
exercise-1/evaluation/: evaluator.py
exercise-2/: ex2-evaluation.ipynb  gradient.py  knn.py  knn_eval.ipynb  knn_eval.pkl  knn_test.py
exercise-2/evaluation/: evaluator.py
