[tool.poetry]
name = "ml24"
version = "0.1.0"
description = ""
authors = ["Alexander Keusch <alex@keusch.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandas = "^2.2.1"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
