[tool.poetry]
name = "ml24"
version = "0.1.0"
description = ""
authors = ["Alexander Keusch <alex@keusch.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandas = {extras = ["openpyxl"], version = "^2.2.2"}
scipy = "^1.12.0"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"
tabulate = "^0.9.0"
ucimlrepo = "^0.0.6"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
